2006-09-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_grg_game) : bug corrected

2006-09-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_grg_game) : new, faster implementation
	* examples/simple/igraph_grg_game.c : slight change to make test 
	succeed with probability 1

2006-09-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_grg_game) : added
	* examples/simple/igraph_grg_game.c : added

	* src/games.c (igraph_barabasi_game, igraph_nonlinear_barabasi_game)
	(igraph_recent_degree_game, igraph_barabasi_aging_game)
	(igraph_recent_degree_aging_game) : use actual number of nodes instead
	of 0 in igraph_create, shouldn't change anything but looks nicer

2006-09-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_maxdegree) : added
	* examples/simple/igraph_degree.c : updated to test igraph_maxdegree

2006-08-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_reciprocity) : rewritten to
	eliminate invalid read (& sometimes segfault on windows)

2006-08-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_pajek) : serious memory
	leaks eliminated

	* src/foreign-graphml.c (igraph_i_graphml_sax_handler_error)
	(igraph_i_graphml_destroy_state) : some memory leaks eliminated

	* src/interfaces/python/graphobject.c (igraphmodule_Graph_delete_edges)
	: memory leak eliminated

	* src/igraph_psumtree.c (igraph_i_log2) : added
	(igraph_psumtree_init) : igraph_i_log2 instead of log2 

2006-08-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-graphml.c (igraph_write_graph_graphml) : 
	added attribute handling

2006-08-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isoclass_create) : error message if 'number' 
	is out of range

	* examples/simple/graphml.c : updated

	* src/foreign-graphml.c (igraph_i_graphml_parser_state)
	(igraph_i_graphml_destroy_state)
	(igraph_i_graphml_sax_handler_start_element)