@@ -1,3 +1,8 @@
+2006-09-15  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structural.properties.R (graph.density) : added
+	* interfaces/R/src/rinterface.c (R_igraph_density) : added
+
 2006-09-05  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/games.R (grg.game) : added
